tests/kyverno-policies/disallow-pvc/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-pvc
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: disallow-pvc
    rule: user-no-pvc
    resources:
      - pvc-skip
      - pvc-skip-paas-staff
    kind: PersistentVolumeClaim
    result: skip
  - policy: disallow-pvc
    rule: user-no-pvc
    resources:
      - test-pass
      - paas-pass
    kind: Pod
    result: pass
  - policy: disallow-pvc
    rule: user-no-pvc
    resources:
      - pvc-fail
      - pvc-paas-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: disallow-pvc
    rule: disallow-pvc
    resources:
      - test-skip
      - paas-staff-skip
    kind: Pod
    result: skip
  - policy: disallow-pvc
    rule: disallow-pvc
    resources:
      - test-pass
      - paas-pass
    kind: Pod
    result: pass
  - policy: disallow-pvc
    rule: disallow-pvc
    resources:
      - test-fail
      - paas-fail
    kind: Pod
    result: fail
  - policy: disallow-pvc
    rule: disallow-statefulset-pvc
    resources:
      - test-statefulset-skip
      - paas-statefulset-skip
    kind: StatefulSet
    result: skip
  - policy: disallow-pvc
    rule: disallow-statefulset-pvc
    resources:
      - test-statefulset-pass
      - paas-statefulset-pass
    kind: StatefulSet
    result: pass
  - policy: disallow-pvc
    rule: disallow-statefulset-pvc
    resources:
      - test-statefulset-fail
      - paas-statefulset-fail
    kind: StatefulSet
    result: fail
