tests/kyverno-policies/disallow-pvc/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: paas
    labels:
      osc.edu/role: paas
      app.kubernetes.io/name: paas
